--- a/src/Components/Register/Register.module.css
+++ b/src/Components/Register/Register.module.css
@@ -9,7 +9,6 @@
   font-weight: 700;
   letter-spacing: -1.5px;
   margin: 0;
-  margin-bottom: 15px;
 }
 
 /* content {
@@ -47,7 +46,8 @@
   font-size: 15px;
   font-weight: 700;
   margin: 10px;
-  padding: 12px 80px;
+  padding: 12px 0;
+  width: 100%;
   letter-spacing: 1px;
   text-transform: capitalize;
   transition: 0.3s ease-in-out;
@@ -130,9 +130,12 @@ form {
 }
 
 .form-container {
-  position: absolute;
+ position: absolute;
   top: 0;
-  height: 100%;
+  height: 100%; 
+  display:  flex;
+  justify-content: center;
+  align-items: center;
   transition: all 0.6s ease-in-out;
 }
 
