Your commit message here

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 :root
 {
-    --main-color:#0aad0a;
+    --main-color:#afcbff;
+    --mycolor-color:#0e1c36;
     --light-color:#f0f3f2;
     --shadow: rgba(145,158,171,.2) 0px 2px 4px -1px,rgba(145,158,171,.14) 0px 4px 5px 0px,rgba(145,158,171,.12) 0px 1px 10px 0px;
     --font-family:'Encode Sans Expanded', sans-serif;
@@ -29,7 +30,7 @@ a , a:hover{
 .product:hover
 {
     box-shadow: var(--shadow);
-    border: solid 1px var(--main-color);
+    border: solid 1px #4F46E5;
 }
 .product .btn 
 {
@@ -37,11 +38,11 @@ a , a:hover{
     transform: translateY(100%);
     opacity: 0;
 }
+
 .product:hover .btn 
 {
     opacity: 1;
     transform: translateY(0%);
-
 }
 .font-sm
 {
